syntax = "proto2"; // I should probably use proto3 but the other ones use 2, so ü§∑üèª‚Äç‚ôÇÔ∏è
message UnpackedNode {
	required uint64 id = 1;
	repeated string tag_keys = 2;
	repeated string tag_vals = 3;
	required double lat = 4;
	required double lon = 5;
	// Optional metadata
	optional int32 version = 10;
	optional uint64 timestamp = 11;
	optional uint64 changeset = 12;
	optional uint64 uid = 13;
	optional string user = 14;
}
message UnpackedWay {
	required uint64 id = 1;
	repeated string tag_keys = 2;
	repeated string tag_vals = 3;
	repeated uint64 nodes = 4;
	// Optional metadata
	optional int32 version = 10;
	optional uint64 timestamp = 11;
	optional uint64 changeset = 12;
	optional uint64 uid = 13;
	optional string user = 14;
}
message UnpackedRelation {
	message UnpackedRelationMember {
		required uint64 id = 1;
		required string type = 2;
		required string role = 3; 
	}
	required uint64 id = 1;
	repeated string tag_keys = 2;
	repeated string tag_vals = 3;
	repeated UnpackedRelationMember members = 4;
	// Optional metadata
	optional int32 version = 10;
	optional uint64 timestamp = 11;
	optional uint64 changeset = 12;
	optional uint64 uid = 13;
	optional string user = 14;
}
message UnpackedElementsCache {
	repeated UnpackedNode nodes = 1;
	repeated UnpackedWay ways = 2;
	repeated UnpackedRelation relations = 3;
}
message GeometryPoints {
	required bool closed = 1;
	optional bool inner = 2;
	repeated sint64 lat = 3; // DELTA coded
	repeated sint64 lon = 4; // DELTA coded
}
message WayGeometry {
	required int64 id = 1;
	required GeometryPoints geometry = 2;
}
message WayGeometryBlock {
	repeated WayGeometry geometries = 1;
}
message RelationGeometry{
	required int64 id = 1;
	repeated GeometryPoints geometry = 2;
}
message RelationGeometryBlock{
	repeated RelationGeometry geometries = 1;
}
message CachedNodePositions{
	repeated sint64 id = 1 [packed=true]; // DELTA coded
	repeated sint64 lat = 2 [packed=true]; // DELTA coded
	repeated sint64 lon = 3 [packed=true]; // DELTA coded
}